--- a/style.css
+++ b/style.css
@@ -4,3 +4,31 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    font-size: 1.2rem;
+    line-height: 1.2;
+}
+
+input,
+select {
+    padding: 10px 18px;
+    border: none;
+    outline: none;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.6);
+    width: 400px;
+}
+
+input {
+    appearance: none;
+}
