--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 body {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
+    gap: 2em;
     justify-content: center;
     align-items: center;
 }
